* chore(package.json): update build script to remove existing build files before running blueprint build --all

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "scripts": {
         "start": "blueprint run",
-        "build": "blueprint build",
+        "build": "rm -rf ./build/* && blueprint build --all",
         "test": "jest"
     },
     "license": "MIT",
