* feat(jetton_example.tact): add _mint_check function to ExampleJettonMaster contract * fix(JettonMaster.tact): rename _check_sender_as_waller to _check_sender_jetton_wallet function * fix(JettonMaster.tact): add self.total_supply increment in _mint function * fix(JettonWallet.tact): add bounced functions to handle bounced transfers and burn notifications * chore(package.json): add dev script for blueprint build * chore(deployJetton.ts): add social field to jettonParams

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "start": "blueprint run",
         "build": "rm -rf ./build/* && blueprint build --all",
+        "dev": "blueprint build",
         "test": "jest"
     },
     "license": "MIT",
