* fix(nft_enforce_royalty_example.tact): calculate bidIncreaseAmount based on bidIncreasePercentage * feat(package.json): add gen script to generate wrappers * feat(genWrapper.sh): add script to generate wrapper files * feat(FNFTCollection.ts): update import path for FNFTCollection * feat(FNFTItem.ts): add wrapper file for FNFTItem * feat(NFTFraction.ts): add wrapper file for NFTFraction * feat(NFTFractionWallet.ts): add wrapper file for NFTFractionWallet * feat(NFTItemAuction.ts): add wrapper file for NFTItemAuction * feat(QuotaShop.ts): add wrapper file for QuotaShop

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "blueprint run",
         "build": "rm -rf ./build/* && blueprint build --all",
         "dev": "blueprint build",
-        "test": "jest"
+        "test": "jest",
+        "gen": "sh ./scripts/genWrapper.sh"
     },
     "license": "MIT",
     "devDependencies": {
