* chore(package.json): fix gen script to use bash instead of sh * feat(genWrapper.sh): add functionality to select directory under 'build' and generate wrapper file for selected directory

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "rm -rf ./build/* && blueprint build --all",
         "dev": "blueprint build",
         "test": "jest",
-        "gen": "sh ./scripts/genWrapper.sh"
+        "gen": "bash ./scripts/genWrapper.sh"
     },
     "license": "MIT",
     "devDependencies": {
