--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "rm -rf ./build/* && blueprint build --all",
         "dev": "blueprint build",
         "test": "jest",
-        "gen": "bash ./scripts/genWrapper.sh"
+        "gen": "bash ./genWrapper.sh"
     },
     "license": "MIT",
     "devDependencies": {
