--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
+    },
+    "dependencies": {
+        "decimal.js": "^10.4.3"
     }
 }
