--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "typescript": "^4.9.5"
     },
     "dependencies": {
+        "@ton/blueprint": "^0.19.0",
+        "@ton/ton": "^13.11.1",
+        "blueprint": "^2.1.5",
         "decimal.js": "^10.4.3"
     }
 }
