--- a/package.json
+++ b/package.json
@@ -10,24 +10,18 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@ton-community/blueprint": "^0.12.0",
-        "@ton-community/sandbox": "^0.11.0",
-        "@ton-community/test-utils": "^0.3.0",
-        "@types/jest": "^29.5.0",
-        "@types/node": "^20.2.5",
-        "jest": "^29.5.0",
-        "prettier": "^2.8.6",
-        "ton": "~13.6.0",
-        "ton-core": "^0.51.0",
-        "ton-crypto": "^3.2.0",
-        "ts-jest": "^29.0.5",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
-    },
-    "dependencies": {
-        "@ton/blueprint": "^0.19.0",
+        "@ton/blueprint": "^0.18.0",
+        "@ton/sandbox": "^0.16.0",
+        "@ton/test-utils": "^0.4.2",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.20",
+        "jest": "^29.7.0",
+        "prettier": "^3.2.5",
         "@ton/ton": "^13.11.1",
-        "blueprint": "^2.1.5",
-        "decimal.js": "^10.4.3"
+        "@ton/core": "~0",
+        "@ton/crypto": "^3.2.0",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
     }
 }
